# FantasyNFL-ML

./: .gitignore  Find-RidgeEntrypoints-PythonOnly.ps1  List-RepoFiles.ps1  README.md  baseline_2025_top24.csv  docs_ml_links.txt  pred_2026_from_2025.csv  pyproject.toml
.github/instructions/: python.instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: stable-state-pass1-pass2.md
src/fantasy_ml/: __init__.py  config.py  nflread_tester.py  ranking.py  run_baseline.py  run_train_ridge.py  scoring.py  scoring_nflverse.py  scoring_rules.py
src/fantasy_ml/data_sources/: __init__.py  base.py  nflverse_source.py
src/fantasy_ml/datasets/: __init__.py  next_season.py
src/fantasy_ml/features/: __init__.py  age_features.py  season_features.py  weekly_to_season.py
src/fantasy_ml/model/: __init__.py  evaluation.py  ridge.py
tests/: test_config.py  test_datasets_next_season.py  test_features_age.py  test_features_season_features.py  test_features_weekly_to_season.py  test_model_evaluation.py  test_model_ridge.py  test_ranking.py  test_run_baseline.py  test_scoring.py  test_scoring_nflverse.py
