[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fantasy-ml"
version = "0.1.0"
description = "A package to predict fantasy points for 2026 using nflreadpy."
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "polars",
    "scikit-learn",
    "python-dotenv",
    "pytest",
    "nflreadpy"
]

[project.optional-dependencies]
testing = ["pytest"]
